updates to Sound_Drip class.

--- a/Flask_notebooks/Flask_Notebook.ipynb
+++ b/Flask_notebooks/Flask_Notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,117 +426,198 @@
     "    def __init__(self, token):\n",
     "        self.token = token\n",
     "    \n",
-    "#     def instantiate_sp(token):\n",
-    "#         sp = spotipy.Spotify(auth=token)\n",
-    "#         return sp\n",
-    "        \n",
-    "#     def instantiate_sp(token):\n",
-    "#         sp = spotipy.Spotify(auth=token)\n",
-    "#         return sp\n",
+    "    def instantiate_sp(self,token):\n",
+    "        sp = spotipy.Spotify(auth=token)\n",
+    "        return sp\n",
     "\n",
-    "#     def get_id(sp):\n",
-    "#         results = sp.current_user_saved_tracks()\n",
-    "#         song_id = results['items'][0]['track']['id']\n",
-    "#         return song_id\n",
+    "    def get_id(self, sp):\n",
+    "        results = sp.current_user_saved_tracks()\n",
+    "        song_id = results['items'][0]['track']['id']\n",
+    "        return song_id\n",
     "\n",
-    "#     def get_acoustical_features(song_id,sp):\n",
-    "#         acoustical_features = sp.audio_features(song_id)[0]\n",
+    "    def get_acoustical_features(self,song_id,sp):\n",
+    "        acoustical_features = sp.audio_features(song_id)[0]\n",
+    "        return acoustical_features\n",
     "\n",
-    "#     def get_popularity(song_id):\n",
-    "#         popularity =  sp.track(song_id)['popularity']\n",
+    "    def get_popularity(self, song_id):\n",
+    "        popularity =  sp.track(song_id)['popularity']\n",
+    "        return popularity\n",
     "\n",
-    "#     def get_artist_id(song_id):\n",
-    "#         artist = sp.track(song_id)['artists'][0]['id']\n",
+    "    def get_artist_id(self, song_id):\n",
+    "        artist = sp.track(song_id)['artists'][0]['id']\n",
+    "        return artist\n",
     "\n",
-    "#     def get_genres(artist):\n",
-    "#         genre = sp.artist(artist)['genres']\n",
-    "\n",
+    "    def get_genres(self, artist):\n",
+    "        genre = sp.artist(artist)['genres']\n",
+    "        return genre\n",
     "    \n",
-    "#     audio_features = {\n",
-    "#         \"audio_features\": {\n",
-    "#             key: results_dict[key] for key in results_dict.keys() & {\n",
-    "#                 'danceability',\n",
-    "#                 'energy',\n",
-    "#                 'key',\n",
-    "#                 'loudness',\n",
-    "#                 'mode',\n",
-    "#                 'speechiness',\n",
-    "#                 'acousticness',\n",
-    "#                 'instrumentalness',\n",
-    "#                 'liveness',\n",
-    "#                 'valence',\n",
-    "#                 'tempo',\n",
-    "#                 'time_signature'}}}"
+    "    def create_feature_object(self, genre, popularity, acoustical_features):\n",
+    "        \n",
+    "#         print(genre, popularity, acoustical_features)\n",
+    "        \n",
+    "        raw_results = {'genre': genre, 'popularity': popularity, 'acoustical_features': acoustical_features}\n",
+    "#         print(raw_results)\n",
+    "        \n",
+    "        audio_features = {\n",
+    "            \"audio_features\": {\n",
+    "                key: raw_results[key] for key in results_dict.keys() & {\n",
+    "                    'danceability',\n",
+    "                    'energy',\n",
+    "                    'key',\n",
+    "                    'loudness',\n",
+    "                    'mode',\n",
+    "                    'speechiness',\n",
+    "                    'acousticness',\n",
+    "                    'instrumentalness',\n",
+    "                    'liveness',\n",
+    "                    'valence',\n",
+    "                    'tempo',\n",
+    "                    'time_signature'}}}\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sd = Sound_Drip(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp = sd.instantiate_sp(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Sound_Drip at 0x15a2d3be0>"
+       "'41WPocvLc3zvC48Xo1duZo'"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Sound_Drip(token)"
+    "sd.get_id(sp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acoustical_features = sd.get_acoustical_features(song_id, sp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "popularity = sd.get_popularity(song_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['__class__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__']"
+       "'3p2pMpzDerhMR4w2xZyHWg'"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dir(Sound_Drip)"
+    "sd.get_artist_id(song_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genre = sd.get_genres('1dfeR4HaWDbWqFHLkxsg1d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'genre': ['glam rock', 'rock'], 'popularity': 39, 'acoustical_features': {'danceability': 0.253, 'energy': 0.652, 'key': 0, 'loudness': -4.647, 'mode': 0, 'speechiness': 0.0406, 'acousticness': 0.215, 'instrumentalness': 0, 'liveness': 0.142, 'valence': 0.298, 'tempo': 75.863, 'type': 'audio_features', 'id': '41WPocvLc3zvC48Xo1duZo', 'uri': 'spotify:track:41WPocvLc3zvC48Xo1duZo', 'track_href': 'https://api.spotify.com/v1/tracks/41WPocvLc3zvC48Xo1duZo', 'analysis_url': 'https://api.spotify.com/v1/audio-analysis/41WPocvLc3zvC48Xo1duZo', 'duration_ms': 197780, 'time_signature': 4}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sd.create_feature_object(genre, popularity, acoustical_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'danceability': 0.253,\n",
+       " 'energy': 0.652,\n",
+       " 'key': 0,\n",
+       " 'loudness': -4.647,\n",
+       " 'mode': 0,\n",
+       " 'speechiness': 0.0406,\n",
+       " 'acousticness': 0.215,\n",
+       " 'instrumentalness': 0,\n",
+       " 'liveness': 0.142,\n",
+       " 'valence': 0.298,\n",
+       " 'tempo': 75.863,\n",
+       " 'type': 'audio_features',\n",
+       " 'id': '41WPocvLc3zvC48Xo1duZo',\n",
+       " 'uri': 'spotify:track:41WPocvLc3zvC48Xo1duZo',\n",
+       " 'track_href': 'https://api.spotify.com/v1/tracks/41WPocvLc3zvC48Xo1duZo',\n",
+       " 'analysis_url': 'https://api.spotify.com/v1/audio-analysis/41WPocvLc3zvC48Xo1duZo',\n",
+       " 'duration_ms': 197780,\n",
+       " 'time_signature': 4}"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acoustical_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
