push updated notebook

--- a/Flask_notebooks/Flask_Notebook.ipynb
+++ b/Flask_notebooks/Flask_Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BQDbMB-oQUiNc8lxIvZy4mcvs5JMx-XDmuBG2yHW421gtWnry9_4Sor1MvTH4Z3ZURbfWxI4eerUtCrm_UZgM-Rl21sw3WBuOmtAx667dubDqZ62BUuWa5wEQPto1C8Q2h0gGD91Zj6CrcN9hHPf0RVW2RKV3VY3hGwjwMNrbnQZ8-7grSbB-eFlSoT556vc00UFlb6c0w'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +91,8 @@
     "        for song_number in range(0,19):\n",
     "            counter += 1 \n",
     "            song_id = results['items'][song_number]['track']['id']\n",
-    "            artist_id = get_artist_id(song_id)\n",
-    "            genre = get_genres(artist_id)\n",
+    "            artist_id = sd.get_artist_id(song_id)\n",
+    "            genre = sd.get_genres(artist_id)\n",
     "            if genre != []:\n",
     "                break\n",
     "        return song_id\n",
@@ -118,6 +138,18 @@
     "        df = df.reindex(sorted(df.columns), axis=1)\n",
     "        return df\n",
     "    \n",
+    "    def get_results(self,song_features_df):\n",
+    "        scaler = load(\"./models/scalar3.joblib\")\n",
+    "        print('Scaling data...')\n",
+    "        data_scaled = scaler.transform(song_features_df)\n",
+    "        normalizer = Normalizer()\n",
+    "        data_normalized = normalizer.fit_transform(data_scaled)\n",
+    "        print('Loading pickled model...')\n",
+    "        model = load('./models/model5.joblib')\n",
+    "        results = model.kneighbors([data_normalized][0])[1:]\n",
+    "        print('results returned')\n",
+    "        return results[0]\n",
+    "    \n",
     "    def filter_model(self,model_results,source_genre_list): \n",
     "        #loop takes KNN results and filters by source track genres\n",
     "        print(\"filter for genres initiated\")\n",
@@ -135,6 +167,7 @@
     "                    else:\n",
     "                        continue\n",
     "        if len(set(filtered_list)) > song_list_length:\n",
+    "            print(\"filter found at least 20 genre matches\")\n",
     "            filtered_list = set(filtered_list)\n",
     "            filtered_list = list(filtered_list)[0:20]\n",
     "        else:\n",
@@ -152,18 +185,6 @@
     "        print(\"filtered list with 20 unique song indices returned\")\n",
     "        return filtered_list\n",
     "    \n",
-    "    def get_results(self,song_features_df):\n",
-    "        scaler = load(\"./data/scalar3.joblib\")\n",
-    "        print('Scaling data...')\n",
-    "        data_scaled = scaler.transform(song_features_df)\n",
-    "        normalizer = Normalizer()\n",
-    "        data_normalized = normalizer.fit_transform(data_scaled)\n",
-    "        print('Loading pickled model...')\n",
-    "        model = load('./models/model5.joblib')\n",
-    "        results = model.kneighbors([data_normalized][0])[1:]\n",
-    "        print('results returned')\n",
-    "        return results[0]\n",
-    "    \n",
     "    def song_id_prediction_output(self,filtered_list): \n",
     "        similar_songs = []\n",
     "        print('song_id_list loading...')\n",
@@ -179,153 +200,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sd = Sound_Drip(token)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sp = sd.instantiate_sp(token)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "song_id = sd.get_user_song_id(sp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "acoustical_features = sd.get_acoustical_features(song_id, sp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "popularity = sd.get_popularity(song_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artist = sd.get_artist_id(song_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "song_features = sd.create_feature_object(popularity, acoustical_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genre = sd.get_genres(artist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scaling data...\n",
+      "Loading pickled model...\n",
+      "results returned\n",
+      "filter for genres initiated\n",
+      "filter found at least 20 genre matches\n",
+      "filtered list with 20 unique song indices returned\n",
+      "song_id_list loading...\n",
+      "song_id_list loaded\n",
+      "Results returned\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([[222673, 188930, 389656, ..., 113323, 198794,  52503]])"
+       "{'songs': [{'similarity': [0.99], 'values': '2C1FzUUtHp31ZdQsTGDM2f'},\n",
+       "  {'similarity': [0.99], 'values': '1NVsdk9Z0xNG2sUhZmkbD0'},\n",
+       "  {'similarity': [0.99], 'values': '5SwPRje7oQV5RP0saxoZp8'},\n",
+       "  {'similarity': [0.99], 'values': '5RrWu7ddslbnrRImeW7LOs'},\n",
+       "  {'similarity': [0.99], 'values': '0FQjfJB4cdkVfxZHz8RV4M'},\n",
+       "  {'similarity': [0.99], 'values': '6PF0WYSCH6OhGKHRHOQSxG'},\n",
+       "  {'similarity': [0.99], 'values': '6vEAyRqugkWBfQpccdiWFU'},\n",
+       "  {'similarity': [0.99], 'values': '7g7aNOC904ne2PUc14Xevb'},\n",
+       "  {'similarity': [0.99], 'values': '4jJwm24UagUP51wTp657Xp'},\n",
+       "  {'similarity': [0.99], 'values': '6roY6Z2b0Q7DH3ZM4SRoTz'},\n",
+       "  {'similarity': [0.99], 'values': '5wmn1zWhSSDLUmLLwYO9Rj'},\n",
+       "  {'similarity': [0.99], 'values': '34tFidHrETMAjsiK87WVVW'},\n",
+       "  {'similarity': [0.99], 'values': '0rUyA7P4nPKCRVvKhFo7XL'},\n",
+       "  {'similarity': [0.99], 'values': '5i2859ZJXGPOzDwdZSOMiH'},\n",
+       "  {'similarity': [0.99], 'values': '3QOQEObqJvCi4M2SNeko7V'},\n",
+       "  {'similarity': [0.99], 'values': '2raNLL2FWxWNA4veLZIuAj'},\n",
+       "  {'similarity': [0.99], 'values': '5UORiENC2iuNTFWopBTJKV'},\n",
+       "  {'similarity': [0.99], 'values': '4vTZpkN2Ri8Lfk2149NqWC'},\n",
+       "  {'similarity': [0.99], 'values': '56RfNBJGUgL1ZFCB1KEJrQ'},\n",
+       "  {'similarity': [0.99], 'values': '2jw0Fejobu4pxfJ1RRNT4W'}]}"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_results(song_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = get_results(song_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([188930, 389656, 546188, 492763, 448984, 570380, 526192, 569447,\n",
-       "       490760])"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results[0][1:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "song_id_array = pickle.load(open(\"./data/song_id_array3.pkl\",\"rb\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'41RpZW2lxAdnqDd2nMBzLQ'"
-      ]
-     },
-     "execution_count": 154,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "song_id_array[1]"
+    "sd = Sound_Drip(token)\n",
+    "sp = sd.instantiate_sp(token)\n",
+    "song_id = sd.get_user_song_id(sp)\n",
+    "acoustical_features = sd.get_acoustical_features(song_id, sp)\n",
+    "popularity = sd.get_popularity(song_id)\n",
+    "song_features_df = sd.create_feature_object(popularity, acoustical_features)\n",
+    "results = sd.get_results(song_features_df)\n",
+    "source_genre = sd.get_genres(sd.get_artist_id(song_id))\n",
+    "filtered_list = sd.filter_model(results,source_genre)\n",
+    "sd.song_id_prediction_output(filtered_list)"
    ]
   },
   {
