Revert "updating flask aws with slider endpoint code"
This reverts commit baa4d2256ba45a1b806906f30c5e07ca3a3e92a1.

--- a/Flask_notebooks/Flask_Notebook.ipynb
+++ b/Flask_notebooks/Flask_Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,16 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'BQDVmrPa-tor--z3jRM9HcbCAHO1uHXasbCtUZyyYXA7IhBdEcENXXHchGQRBbN9tsIn9QzhUaVbF_zO2B22MAFgXQryPHEHeAAZ2lwSst8C6JRnIrnGuFog2t2AXHrpO1-T6GkQ0gmt6qPQi9gPcXq90vbXV4k90UnGTjETsbVSh3djhTBWlwQd-2Cs5Qj75JEQ76gYPw'"
+       "'BQDbMB-oQUiNc8lxIvZy4mcvs5JMx-XDmuBG2yHW421gtWnry9_4Sor1MvTH4Z3ZURbfWxI4eerUtCrm_UZgM-Rl21sw3WBuOmtAx667dubDqZ62BUuWa5wEQPto1C8Q2h0gGD91Zj6CrcN9hHPf0RVW2RKV3VY3hGwjwMNrbnQZ8-7grSbB-eFlSoT556vc00UFlb6c0w'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,15 +70,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Automated Recommendations Utilizing User Data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,118 +259,6 @@
     "source_genre = sd.get_genres(sd.get_artist_id(song_id))\n",
     "filtered_list = sd.filter_model(results,source_genre)\n",
     "sd.song_id_prediction_output(filtered_list)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Slider Functionality Utilizing Acoustical Features / Popularity "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Slider(Sound_Drip):\n",
-    "\n",
-    "    def __init__(self,slider_features):\n",
-    "        self.slider_features = slider_features\n",
-    "        self.slider_features_df = self.create_slider_feature_df(slider_features)\n",
-    "        self.slider_results_list = self.get_slider_results(self.slider_features_df)[0][0:20]\n",
-    "        self.slider_predictions = self.song_id_prediction_output(self.slider_results_list)\n",
-    "\n",
-    "    def create_slider_feature_df(self,slider_features):\n",
-    "            df = pd.DataFrame.from_dict(json_normalize(self.slider_features[\"audio_features\"]),orient='columns')   \n",
-    "            df = df.reindex(sorted(df.columns), axis=1)\n",
-    "            return df\n",
-    "        \n",
-    "    def get_slider_results(self,song_features_df):\n",
-    "        scaler = load(\"./models/scalar3.joblib\")\n",
-    "        print('Scaling data...')\n",
-    "        data_scaled = scaler.transform(song_features_df)\n",
-    "        normalizer = Normalizer()\n",
-    "        data_normalized = normalizer.fit_transform(data_scaled)\n",
-    "        print('Loading pickled model...')\n",
-    "        model = load('./models/slider_model6.joblib')\n",
-    "        results = model.kneighbors([data_normalized][0])[1:]\n",
-    "        print('results returned')\n",
-    "        return results[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scaling data...\n",
-      "Loading pickled model...\n",
-      "results returned\n",
-      "song_id_list loading...\n",
-      "song_id_list loaded\n",
-      "Results returned\n"
-     ]
-    }
-   ],
-   "source": [
-    "slider = Slider({'audio_features': {'time_signature': 4,\n",
-    "  'speechiness': 0.0486,\n",
-    "  'acousticness': 0.961,\n",
-    "  'danceability': 0.62,\n",
-    "  'tempo': 104.853,\n",
-    "  'loudness': -23.873,\n",
-    "  'mode': 1,\n",
-    "  'popularity': 31,\n",
-    "  'valence': 0.053,\n",
-    "  'key': 11,\n",
-    "  'liveness': 0.0741,\n",
-    "  'instrumentalness': 0.911,\n",
-    "  'energy': 0.231}})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'songs': [{'similarity': [0.99], 'values': '5veDwfLOlXmBuhIVm3RSZO'},\n",
-       "  {'similarity': [0.99], 'values': '6felOCUcTlQkJFDHirtjMj'},\n",
-       "  {'similarity': [0.99], 'values': '7ouMGV7ScnMUGXKFGAGjXe'},\n",
-       "  {'similarity': [0.99], 'values': '2qV5Ce0sMlFsrseRO5CTMU'},\n",
-       "  {'similarity': [0.99], 'values': '3AJsTNjbYSH4odSmP1I6ox'},\n",
-       "  {'similarity': [0.99], 'values': '0VNZCqwaPxzWPRX2HI4jrR'},\n",
-       "  {'similarity': [0.99], 'values': '2pOwQxSiySqoz62gSTOM5O'},\n",
-       "  {'similarity': [0.99], 'values': '3SW6e25WyEZ6bNQBwhp0xL'},\n",
-       "  {'similarity': [0.99], 'values': '7ipLv29x7jjxTJjn64DQ7F'},\n",
-       "  {'similarity': [0.99], 'values': '4eHq5gcF7S78ouJxR12mGc'},\n",
-       "  {'similarity': [0.99], 'values': '4zMdab1CnihodiQ9WKYYlC'},\n",
-       "  {'similarity': [0.99], 'values': '7u1vYcWXbkuuanQXrgykWk'},\n",
-       "  {'similarity': [0.99], 'values': '1oIbOjq8A5mTMy5UdhCDai'},\n",
-       "  {'similarity': [0.99], 'values': '4N6XEpicdgcQNcwUDW5mnM'},\n",
-       "  {'similarity': [0.99], 'values': '0QiHMdOI4BZ4D9Lc6kczNl'},\n",
-       "  {'similarity': [0.99], 'values': '0por6sYzb2g12BcYrqBUiW'},\n",
-       "  {'similarity': [0.99], 'values': '3jqcJNacs1yDhtMk0wckxv'},\n",
-       "  {'similarity': [0.99], 'values': '2fe8fbP6m9AfxbEHsj3ll5'},\n",
-       "  {'similarity': [0.99], 'values': '0R6Jlsq25eZB3Wftpxi3oF'},\n",
-       "  {'similarity': [0.99], 'values': '3RoQX4ou3qYEASsuC7YAWD'}]}"
-      ]
-     },
-     "execution_count": 134,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "slider.slider_predictions"
    ]
   },
   {
@@ -713,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,16 +605,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<spotipy.client.Spotify at 0x11ac0dbd0>"
+       "<spotipy.client.Spotify at 0x124937ed0>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -822,50 +703,13 @@
        "'1WbwlYiiMZGQlrFGirRnHv'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "song_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'danceability': 0.62,\n",
-       " 'energy': 0.231,\n",
-       " 'key': 11,\n",
-       " 'loudness': -23.873,\n",
-       " 'mode': 1,\n",
-       " 'speechiness': 0.0486,\n",
-       " 'acousticness': 0.961,\n",
-       " 'instrumentalness': 0.911,\n",
-       " 'liveness': 0.0741,\n",
-       " 'valence': 0.053,\n",
-       " 'tempo': 104.853,\n",
-       " 'type': 'audio_features',\n",
-       " 'id': '1WbwlYiiMZGQlrFGirRnHv',\n",
-       " 'uri': 'spotify:track:1WbwlYiiMZGQlrFGirRnHv',\n",
-       " 'track_href': 'https://api.spotify.com/v1/tracks/1WbwlYiiMZGQlrFGirRnHv',\n",
-       " 'analysis_url': 'https://api.spotify.com/v1/audio-analysis/1WbwlYiiMZGQlrFGirRnHv',\n",
-       " 'duration_ms': 185720,\n",
-       " 'time_signature': 4}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_acoustical_features(song_id,sp)"
    ]
   },
   {
@@ -877,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,37 +744,6 @@
     "                'time_signature'}}}\n",
     "\n",
     "    return audio_features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'audio_features': {'time_signature': 4,\n",
-       "  'speechiness': 0.0486,\n",
-       "  'acousticness': 0.961,\n",
-       "  'danceability': 0.62,\n",
-       "  'tempo': 104.853,\n",
-       "  'mode': 1,\n",
-       "  'loudness': -23.873,\n",
-       "  'valence': 0.053,\n",
-       "  'key': 11,\n",
-       "  'liveness': 0.0741,\n",
-       "  'instrumentalness': 0.911,\n",
-       "  'energy': 0.231}}"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "get_features(song_id,sp)"
    ]
   },
   {
