--- a/data_collection/jsonize_db.ipynb
+++ b/data_collection/jsonize_db.ipynb
@@ -718,9 +718,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sss",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sss"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -732,7 +732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
