--- a/data_exploration/genre_encoding_ideas.ipynb
+++ b/data_exploration/genre_encoding_ideas.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "[5 rows x 69 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "4    0.294                             ['swedish indie rock']  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
        "2110517"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,23 +526,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3488"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(unique_genres)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'bhangra'\n",
-      "'wellington indie'\n",
-      "'traditional folk'\n",
-      "'theme'\n",
-      "'swedish post-hardcore'\n",
-      "'deathrock'\n",
-      "'abstract'\n",
-      "'kaneka'\n",
-      "'moog'\n",
-      "'latin tech house'\n"
+      "'irish rock'\n",
+      "'microhouse'\n",
+      "'classic nz country'\n",
+      "'british country'\n",
+      "'quebec death metal'\n",
+      "'re:techno'\n",
+      "'zimdancehall'\n",
+      "'latvian indie'\n",
+      "'franco-flemish school'\n",
+      "'viola caipira'\n"
      ]
     }
    ],
@@ -553,34 +573,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in unique_genres[0:100]:\n",
+    "for i in unique_genres[0:50]:\n",
     "    df[i]= 0 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['genres', ''bhangra'', ''wellington indie'', ''traditional folk'',\n",
-       "       ''theme'', ''swedish post-hardcore'', ''deathrock'', ''abstract'',\n",
-       "       ''kaneka'', ''moog'',\n",
-       "       ...\n",
-       "       ''post-post-hardcore'', ''tahitian'', ''swedish dancehall'',\n",
-       "       ''screamo'', ''uk pop'', ''progressive uplifting trance'',\n",
-       "       ''space rock'', ''deep new wave'', ''musica de pernambuco'',\n",
-       "       ''freestyle''],\n",
-       "      dtype='object', length=101)"
+       "Index(['genres', ''irish rock'', ''microhouse'', ''classic nz country'',\n",
+       "       ''british country'', ''quebec death metal'', ''re:techno'',\n",
+       "       ''zimdancehall'', ''latvian indie'', ''franco-flemish school'',\n",
+       "       ''viola caipira'', ''guinean pop'', ''merida indie'', ''nitzhonot'',\n",
+       "       ''slovak metal'', ''outlaw country'', ''j-pixie'', ''kantele'',\n",
+       "       ''louvor'', ''mbira'', ''drill and bass'', ''psychedelic punk'',\n",
+       "       ''gothenburg metal'', ''birdsong'', ''british invasion'',\n",
+       "       ''norwegian pop rap'', ''cumbia ecuatoriana'', ''pinoy pop punk'',\n",
+       "       ''irish neo-traditional'', ''indie psych-pop'', ''speed metal'',\n",
+       "       ''stuttgart indie'', ''belgian new wave'', ''french folk'',\n",
+       "       ''jazz drums'', ''morna'', ''kansas indie'', ''psych gaze'',\n",
+       "       ''vapor soul'', ''hungarian punk'', ''nz metal'', ''british math rock'',\n",
+       "       ''albany ny indie'', ''dutch hip hop'', ''oshare kei'',\n",
+       "       ''hungarian contemporary classical'', ''sarangi'', ''lincoln ne indie'',\n",
+       "       ''traditional blues'', ''uk pop'', ''experimental jazz''],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,73 +618,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['finnish indie', 'suomi rock']\n",
-      "['bass music', 'scottish electronic', 'scottish hip hop', 'uk experimental electronic', 'wonky']\n",
-      "'uk experimental electronic'\n",
-      "['hip hop', 'new jack swing', 'rap']\n",
-      "['bolero', 'mariachi', 'ranchera']\n",
-      "['swedish indie rock']\n",
-      "['semba']\n",
-      "['classic swedish pop', 'europop', 'swedish pop']\n",
-      "['ectofolk', 'folk', 'lilith', 'new wave pop', 'pop rock', 'singer-songwriter', 'traditional folk']\n",
-      "'traditional folk'\n",
-      "['brutal death metal', 'death metal', 'deathgrind', 'groove metal', 'technical death metal']\n",
-      "['christian metal', 'christian rock', 'dreamo', 'post-hardcore', 'progressive post-hardcore', 'screamo']\n",
-      "'screamo'\n"
+      "'drill and bass'\n",
+      "'microhouse'\n",
+      "'outlaw country'\n",
+      "'jazz drums'\n",
+      "'traditional blues'\n",
+      "'lincoln ne indie'\n",
+      "'uk pop'\n",
+      "'irish rock'\n",
+      "'traditional blues'\n",
+      "'drill and bass'\n",
+      "'microhouse'\n",
+      "'traditional blues'\n",
+      "'british invasion'\n",
+      "'british invasion'\n"
      ]
     }
    ],
    "source": [
     "counter = -1 \n",
-    "for genre_list in df[\"genres\"][0:10]:\n",
-    "    print(genre_list)\n",
+    "for genre_list in df[\"genres\"][0:200]:\n",
+    "#     print(genre_list)\n",
     "    counter += 1 \n",
     "    genre_list = genre_list.split(\",\")\n",
     "    for genre in genre_list:\n",
     "        genre = genre.strip(\"]\")\n",
     "        genre = genre.strip(\"[\")\n",
     "        genre = genre.strip(\" \") \n",
+    "#         print(\"source_genre:\",genre)\n",
     "        for column in df.columns[18:]:\n",
+    "#             print(\"output_column:\",column)\n",
+    "#             columns = column.strip(\" \")\n",
     "            if column == genre:\n",
     "                print(column)\n",
-    "                df[column].loc[counter] = 1 "
+    "                df[column].loc[counter] = 1 \n",
+    "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    0\n",
-       "1    1\n",
-       "2    0\n",
-       "3    0\n",
-       "4    0\n",
-       "5    0\n",
-       "6    0\n",
-       "7    0\n",
-       "8    0\n",
-       "9    0\n",
-       "Name: 'uk experimental electronic', dtype: int64"
+       "0    198\n",
+       "1      2\n",
+       "Name: 'drill and bass', dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"'uk experimental electronic'\"][0:10]"
+    "df[\"'drill and bass'\"][0:200].value_counts()"
    ]
   },
   {
